--- a/app/src/main/res/layout/activity_video_editor_parameters.xml
+++ b/app/src/main/res/layout/activity_video_editor_parameters.xml
@@ -131,7 +131,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:text="@string/null_value"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_level"
         tools:visibility="visible" />
@@ -212,7 +212,7 @@
         android:max="399"
         android:min="10"
         android:progress="10"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textViewAlpha"
@@ -373,7 +373,7 @@
         android:layout_marginTop="20dp"
         android:text="@string/low_frequency"
         android:textStyle="bold"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewLevel"
         tools:visibility="visible" />
